included new ui changes to spatial unit manager dock widget

--- a/ui/ui_edit_stdm_layer.ui
+++ b/ui/ui_edit_stdm_layer.ui
@@ -92,7 +92,7 @@
     <item row="1" column="0">
      <widget class="QGroupBox" name="groupBox_2">
       <property name="title">
-       <string>Import Layers</string>
+       <string>Import Features</string>
       </property>
      </widget>
     </item>
