--- a/ui/ui_spatial_unit_manager.ui
+++ b/ui/ui_spatial_unit_manager.ui
@@ -37,7 +37,7 @@
        </size>
       </property>
       <property name="title">
-       <string>Manage Layers</string>
+       <string>Manage Layers:</string>
       </property>
       <layout class="QGridLayout" name="gridLayout">
        <item row="0" column="1">
@@ -91,16 +91,24 @@
     </item>
     <item row="1" column="0">
      <widget class="QGroupBox" name="groupBox_2">
+      <property name="minimumSize">
+       <size>
+        <width>0</width>
+        <height>0</height>
+       </size>
+      </property>
       <property name="title">
-       <string>Import Features</string>
+       <string>Import Feature:</string>
       </property>
-     </widget>
-    </item>
-    <item row="2" column="0">
-     <widget class="QPushButton" name="import_gpx_file_button">
-      <property name="text">
-       <string>Import GPX File</string>
-      </property>
+      <layout class="QGridLayout" name="gridLayout_3">
+       <item row="0" column="0">
+        <widget class="QPushButton" name="import_gpx_file_button">
+         <property name="text">
+          <string>From GPX File...</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </widget>
     </item>
    </layout>
