--- a/ui/wizard/ui_bigint_property.ui
+++ b/ui/wizard/ui_bigint_property.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Bigint properties</string>
+   <string>Whole number properties</string>
   </property>
   <widget class="QDialogButtonBox" name="buttonBox">
    <property name="geometry">
