--- a/ui/wizard/ui_lookup_property.ui
+++ b/ui/wizard/ui_lookup_property.ui
@@ -57,6 +57,9 @@
      <height>20</height>
     </rect>
    </property>
+   <property name="insertPolicy">
+    <enum>QComboBox::InsertAtTop</enum>
+   </property>
   </widget>
   <widget class="QPushButton" name="edtNewlookup">
    <property name="geometry">
